--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -5,9 +5,9 @@
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
+    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
+    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -91,12 +91,12 @@ body {
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
+  /* background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-start-rgb)); */
 }
 
 a {
@@ -108,4 +108,42 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+.react-select__value-container {
+  justify-content: flex-start;
+}
+
+.react-numeric-input {
+  display: flex !important;
+  align-items: center;
+  height: 40px;
+  /* width: fit-content; */
+}
+.form-control {
+  padding-right: 40px !important;
+  padding-left: 40px !important;
+  &:focus-visible {
+    outline: none;
+  }
+}
+
+.react-numeric-input > b {
+  border-radius: 9999px !important;
+  height: 40px !important;
+  width: 40px !important;
+  cursor: pointer !important;
+  background-color: transparent !important;
+}
+
+.category > div {
+  display: grid !important;
+  column-gap: 12px;
+  row-gap: 20px;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.category > div > div {
+  border-radius: 6px !important;
+  margin-right: 0 !important;
 }
