--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -147,3 +147,21 @@ a {
   border-radius: 6px !important;
   margin-right: 0 !important;
 }
+
+label::before {
+  position: absolute;
+  content: "";
+  z-index: -1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background: transparent;
+  border: 1px solid #e0e0e0;
+  border-radius: 6px;
+}
+
+input:checked + label::before {
+  border: 2px solid purple;
+}
