--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -204,3 +204,9 @@ input:checked + .fullContainer::before {
 .relative{
   position: relative;
 }
+
+.loaderText{
+  font-size: 20px;
+  font-weight: bold;
+  letter-spacing: 1.2px;
+}
