--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -97,6 +97,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb)); */
+  font-family: "Ryker", sans-serif;
 }
 
 a {
